# RobotDog

./: README.md
Demos/: Mediapipe.ipynb  Mediapipe_pose_detection.ipynb  createstereoinput.sh  createvirtualmic.sh  createvirtualmic_wireless.sh  extract frame for ppt.ipynb  ros_audio_topic_old.py  ros_video_topic_old.py  start_pipewire  unified_audio.py
Demos/DOA/: mic test.ipynb  multiple mics.ipynb  multithreading.ipynb
Demos/ROS_demo_2/: brain_HL.py  ros_audio_topic.py  ros_video_topic.py
Demos/ROS_demo_3/: ros_audio_topic.py  ros_video_topic.py
Demos/ROS_demo_3/custom_msg/: CMakeLists.txt
Demos/ROS_demo_3/hand_recognition_model/epoch_models/: model-0003.data-00000-of-00001  model-0007.data-00000-of-00001  model-0007.index  model-0008.index  model-0009.data-00000-of-00001  model-0010.data-00000-of-00001  model-0011.data-00000-of-00001  model-0014.data-00000-of-00001  model-0015.index
Demos/ROS_demo_4/: brain_HL.py  video_setup.sh
Demos/ROS_demo_4/hand_recognition_model/epoch_models/: model-0001.data-00000-of-00001  model-0002.data-00000-of-00001  model-0004.index  model-0005.data-00000-of-00001  model-0006.data-00000-of-00001  model-0007.index  model-0008.index  model-0009.index  model-0010.index  model-0012.data-00000-of-00001  model-0012.index  model-0013.data-00000-of-00001  model-0013.index  model-0014.index  model-0015.data-00000-of-00001  model-0015.index
Demos/action recognition pipeline/LSTM/: ActionRecognition.ipynb  Live_LSTM_testing.ipynb
Demos/action recognition pipeline/hand poses/exported_model/: best_model_weights.data-00000-of-00001
Demos/action recognition pipeline/hand poses/exported_model_3/: best_model_weights.index
Demos/action recognition pipeline/mediapipe+conv/: dataset_mean.npy  dataset_std.npy  model test.ipynb
Demos/forearm tracking/: 3d skeleton tracking.ipynb
Demos/images presentation/: micro casque.avif
Demos/keyword spotting/: cleaned_kws_v2.ipynb  id2label.pkl  label2id.pkl  record new keyowrds.ipynb  train and inference gkwv2 V2.ipynb  webapp.html
Demos/keyword spotting/gsr_v2_cleaned/: train.csv
Demos/librealsense-jupyter/notebooks/: depth_filters.ipynb  distance_to_object.ipynb  quick_start_live.ipynb  quick_start_rosbag.ipynb
DynamixelSDK-master/: README.md
DynamixelSDK-master/python/src/dynamixel_sdk/: port_handler.py
DynamixelSDK-master/python/tests/protocol1_0/: head_node.py  head_nody.py  ping.py  quadruped_head.py  quadruped_head_tests.py  read_write.py
DynamixelSDK-master/python/tests/protocol2_0/: ping.py  read_write.py
ROS_packages/custom_msg/msg/: Frame_info_3.msg
ROS_packages/go1_full/: .gitignore
ROS_packages/go1_full/go1_software/: CMakeLists.txt  package.xml
ROS_packages/go1_full/go1_software/CPG/: HopfPolar.cpp  HopfPolar.h
ROS_packages/go1_full/go1_software/include/: LegController.h  OrientationEstimator.h  Quadruped.h  StateEstimatorContainer.h  body.h
ROS_packages/go1_full/go1_software/include/Math/: orientation_tools.h
ROS_packages/go1_full/go1_software/launch/: quad_rviz.launch
ROS_packages/go1_full/go1_software/src/: OrientationEstimator.cpp  PositionVelocityEstimator.cpp  body.cpp
ROS_packages/go1_full/go1_software/src/exe/: .high_lvl_controller.cpp.swp  camera_command_lcm.cpp  controller_demo_2.cpp  controller_demo_3.cpp  example_pos_lcm.cpp  example_position.cpp  run_cpg.cpp  run_cpg_lcm.cpp
ROS_packages/go1_full/unitree_ros/: README.md  tmp.urdf
ROS_packages/go1_full/unitree_ros_to_real/: README.md
Semester-project-MA4-main/: .gitignore  OpenPifPaf.py  RealsenseTracking.py  full skeleton drawer.ipynb  main.py  removevirtualmic.sh
Semester-project-MA4-main/DOA/: multiple mics v2.ipynb
Semester-project-MA4-main/ROS_demo_2/: brain_HL.py  camera_com_node.py
Semester-project-MA4-main/ROS_demo_2/custom_msg/: package.xml
Semester-project-MA4-main/ROS_demo_3/: brain_HL.py  go1_setup.sh  ros_audio_topic.py  ros_video_topic.py
Semester-project-MA4-main/ROS_demo_3/hand_recognition_model/epoch_models/: model-0002.index  model-0003.data-00000-of-00001  model-0004.data-00000-of-00001  model-0005.index  model-0008.data-00000-of-00001  model-0011.data-00000-of-00001  model-0011.index  model-0014.data-00000-of-00001
Semester-project-MA4-main/ROS_demo_4/: brain_HL.py  brain_setup.sh  head_node.py
Semester-project-MA4-main/ROS_demo_4/custom_msg/msg/: Frame_info.msg
Semester-project-MA4-main/ROS_demo_4/hand_recognition_model/epoch_models/: checkpoint  model-0001.index  model-0003.index  model-0006.data-00000-of-00001  model-0008.data-00000-of-00001  (+2 more)
Semester-project-MA4-main/ROS_demo_5/: ros_audio_topic.py  ros_video_topic.py
Semester-project-MA4-main/action recognition pipeline/LSTM/: dataset-creator.ipynb
Semester-project-MA4-main/action recognition pipeline/hand poses/: data_gathering_hand_poses.ipynb  mediapipe example.ipynb  mediapipe_clean.ipynb
Semester-project-MA4-main/action recognition pipeline/mediapipe+conv/: data gathering.ipynb  live inference.ipynb  model trainin.ipynb
Semester-project-MA4-main/keyword spotting/: experiments.ipynb  train and inference gkwv2.ipynb
Semester-project-MA4-main/keyword spotting/gsr_v2_cleaned/: test.csv
Semester-project-MA4-main/librealsense-jupyter/notebooks/: depth_under_water.ipynb
Semester-project-MA4-main/powerpoint/: Meeting 1.pptx  Meeting sem 5.pptx
Semester-project-MA4-main/text-to-speech/: text-to-speech.ipynb
catkin_ws_go1/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws_go1/src/custom_msg/: CMakeLists.txt
catkin_ws_go1/src/go1_full/: README.md
(+768 files in other folders)
